<resources>
    <string name="app_name">KabooMe</string>
    <string name="create_new_account">Create new account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign up</string>
    <string name="already_a_member_question">Already a member?</string>
    <string name="login">Login</string>
    <string name="confirm_account">Confirm Account</string>
    <string name="code">Code</string>
    <string name="confirm">Confirm</string>
    <string name="sign_up_confirmation_helper_text">Enter the sent code to verify your account</string>
    <string name="resend_code">Resend code</string>
    <string name="registration">Registration</string>
    <string name="confirm_phone_number">Confirm phone number</string>
    <string name="login_confirmation_helper_text">Enter the sent code to verify your phone number</string>
    <string name="skip">Skip</string>
    <string name="onboarding_page_first_title">Connecting people with common purpose</string>
    <string name="onboarding_page_second_title">We all wear different hats</string>
    <string name="onboarding_page_second_subtitle">Different identity for each group</string>
    <string name="onboarding_page_third_title">Group management made easy</string>
    <string name="onboarding_page_third_subtitle">Easy to join. Easy to leave</string>
    <string name="sign_up_name_hint">Full Name</string>
    <string name="sign_up_email_hint">Email</string>
    <string name="sign_up_phone_hint">Phone number</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="sign_up_already_a_member">Already a member?</string>
    <string name="signup_login">Login</string>
    <string name="verification_confirm_account">Confirm account</string>
    <string name="verification_input_code">Enter code</string>
    <string name="verification_enter_code_message">Enter the sent code to verify your account</string>
    <string name="confirm_button">Confirm</string>
    <string name="verification_resend_code">Resend Code</string>
    <string name="login_button">Login</string>
    <string name="login_signUp_message">SignUp</string>
    <string name="verification_please_wait_message">It may take a few seconds for code SMS to arrive, please wait.</string>
    <string name="invitations">Invitations</string>
    <string name="search">search</string>
    <string name="toolbar_app_name">Kaboo Me</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_group_message">No Groups have been added yet</string>
    <string name="no_groups_added_yet">No groups added yet</string>
    <string name="no_groups_added_yet_detail">Tap the “Plus” button and create a group or join one by clicking on the search</string>
    <string name="create_group_toolbar_app_name">Create New Group</string>
    <string name="enter_group_name_hint">Group Name</string>
    <string name="enter_group_info_hint">Please state the purpose of the group and any other information that will help people to identify the group</string>
    <string name="new_group_group_purpose_hint">Please state the purpose of the group and any other information that will help people to identify the group</string>
    <string name="enter_your_alias_hint">Your Alias in the group</string>
    <string name="new_group_privacy_label">Private group</string>
    <string name="enter_group_expiry_hint">Expiry date(Leave empty for no expiry)</string>
    <string name="enter_group_role_hint">Your role in the Group - Admin by default</string>
    <string name="enter_group_role_text">"Add the role that you will play in the group. Role shows up next to your Alias in the Group Messages. For example - \'Alias - John's Mom\' with Role - \'Room Rep\'"</string>
    <string name="picture_dialog_select_from_camera">From Camera</string>
    <string name="picture_dialog_or">OR</string>
    <string name="picture_dialog_select_from_gallery">From Gallery</string>
    <string name="no_more_messages">No more messages</string>
    <string name="group_message_send">Send</string>
    <string name="hint_enter_a_message">Type a message...</string>
    <string name="group_info_label">Group Info</string>
    <string name="change_picture">Change Picture</string>
    <string name="save">Save</string>
    <string name="group_name_hint">Group Name</string>
    <string name="group_edit_label">Group Edit</string>
    <string name="group_description_hint">Description</string>
    <string name="group_notification_edit_label">Notifications</string>
    <string name="edit_group_notifications_urgent">Only urgent messages</string>
    <string name="edit_group_notifications_all">All messages</string>
    <string name="edit_group_notifications_off">Off</string>
    <string name="group_aliasAndRoler_hint">Your Alias in this group</string>
    <string name="group_role_hint">Role</string>
    <string name="leave_group_delete_message">Since you are the only Admin, this group will be deleted for you and all members</string>
    <string name="leave_group_message">If you leave this group you will stop receiving related messages</string>
    <string name="invite_members">Invite Members</string>
    <string name="see_all_members">See all members</string>
    <string name="group_edit_add_admin">Add Admins</string>
    <string name="done">DONE</string>
    <string name="group_search_label">Group Search</string>
    <string name="group_search_hint">Search</string>
    <string name="join">Join</string>
    <string name="no_results_found">No groups found matching</string>
    <string name="fill_info_to_join">Fill Info to Join</string>
    <string name="group_join_alias">Your Alias in the group</string>
    <string name="group_join_message">Write a message</string>
    <string name="join_group">Join Group</string>
    <string name="group_role_message">Enter your role in group</string>
    <string name="group_messages_label">Group Messages</string>
    <string name="content_description">cancel</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_help">Help</string>
    <string name="group_profile_label">Profile</string>
    <string name="user_name_hint">Full Name</string>
    <string name="user_email_hint">Email</string>
    <string name="scan_from_gallery">Scan from Gallery</string>
    <string name="invite_contacts_hint">Invite members</string>
    <string name="no_invitations">No invitations yet</string>
    <string name="no_invitations_detail">There are no invitations sent or pending for you right now</string>
    <string name="reject">Reject</string>
    <string name="cancel">cancel</string>
    <string name="group_qr_label_0">Scan the QR Code printed above/below in the Kaboo Me App to join the group.</string>
    <string name="group_qr_label_1">Scan the QR Code printed below in the Kaboo Me App to join the group.</string>
    <string name="group_qr_label_2">Follow these intructions to join :</string>
    <string name="group_qr_label_3">1. Open the Kaboo Me App</string>
    <string name="group_qr_label_4">2. Click on the Search Icon in the top menu</string>
    <string name="group_qr_label_5">3. Click on Search By QR</string>
    <string name="group_qr_label_6">4. Scan this QR code in the Camera opened</string>
    <string name="group_qr_label_7">Once successfully scanned, it will take you to the Group Join Page</string>
    <string name="group_qr_label_8">If the app is not installed, you can install Kaboo Me by going to the link below or scanning the QR Code below</string>
    <string name="group_qr_app_link">http://kaboome.com</string>
    <string name="send_request_message">This message will help the admin to accept you in the group</string>
    <string name="send_request_button">Send Request</string>
    <string name="group_request_admin_message">Enter message for Admin</string>
    <string name="group_join_private_alias">Enter you Alias for the group</string>
    <string name="groupRequests">Requests</string>
    <string name="confirm_group">Confirm</string>
    <string name="no_group_requests">No Requests to show</string>
    <string name="group_invite_message">Add a message to be sent with the invitation</string>
    <string name="send_button">send</string>
    <string name="try_again">Try again?</string>
    <string name="go_back">Go Back</string>
    <string name="no_members_regular">All members are Admin already</string>
    <string name="group_private_alert">This group is private, no one can join it without your permission. You will get a request from them which you can then approve or reject.This setting cannot be changed once a group is created.</string>
    <string name="group_private_message">This group is private, no one can join it without admins permission. Admin will get a request which they can then approve or reject.</string>
    <string name="group_public_alert">This group is open, anybody who is interested can join it.This setting cannot be changed once a group is created.</string>
    <string name="group_requests_close">This group will be closed to  public. No one will be able to send any requests to join the group.</string>
    <string name="group_requests_open">This group will be open to accepting new requests.</string>
    <string name="save_picture">Looks Good! Save It</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="normal">Normal</string>
    <string name="urgent">Urgent</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="contacts">Contacts</string>
    <string name="audio">Audio</string>
    <string name="documents">Documents</string>
    <string name="pdf">PDFs</string>
    <string name="hint_add_caption">Add caption</string>
    <string name="video">Videos</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>
    <string name="change_your_group_picture">Change your profile pic for group</string>
    <string name="reset_your_group_picture">Reset to default</string>
    <string name="verification_check_email_message">If you still do not receive text, please check your email. We send the code there too.</string>
    <string name="missing_alias_message">Please enter an Alias for the group. This is how the group will know you</string>
    <string name="missing_role_message">No role entered, default role \'Member\' will be used</string>
    <string name="add_profile_pic_detail"><![CDATA[If you haven\'t yet, create a profile pic. Click on the Hamburger icon->Profile]]></string>
    <string name="join_create_success">Done ! You will see it in the Groups List in a bit</string>
    <string name="group_join_create_success_label">Group Joined</string>
    <string name="new_group_welcome_message_1a">You have successfully created the new group</string>
    <string name="new_group_welcome_message_1b">This group is Public. Anyone can join this group</string>
    <string name="new_group_welcome_message_2">Groups can have :</string>
    <string name="new_group_welcome_message_3">500 or more members</string>
    <string name="new_group_welcome_message_4">Admins can delete any message</string>
    <string name="new_group_welcome_message_5">Attachments download only when offline</string>
    <string name="enter_group_alias_text">Alias is name this Group will know you by. For example - \'Alias - John\'s Mom\'</string>
    <string name="subject">Subject</string>
    <string name="hint_enter_feedback_message">Please type the feedback message in detail</string>
    <string name="feedback_contact">Can we contact you?</string>
    <string name="send_feedback">Send Feedback</string>
</resources>