<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.views.features.VerificationActivity">

    <TextView
        android:id="@+id/verification_confirm_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/verification_confirm_account"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/verification_input_code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verification_confirm_code"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:hint="@string/verification_input_code"
        android:background="@drawable/border"
        >

        <EditText
            android:id="@+id/verification_input_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="number"
            android:background="@null"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/verification_input_code_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verification_input_code_layout"
        android:layout_marginTop="10dp"
        android:text="@string/verification_enter_code_message"/>

    <TextView
        android:id="@+id/verification_please_wait_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verification_input_code_message"
        android:layout_marginTop="8dp"
        android:text="@string/verification_please_wait_message"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/verification_check_email_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verification_please_wait_message"
        android:layout_marginTop="8dp"
        android:text="@string/verification_check_email_message"
        android:textSize="10sp"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verification_input_code_message"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/confirm_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:id="@+id/verification_confirm_Button"
        android:background="@drawable/gradient"

        />

    <TextView
        android:id="@+id/verification_resend_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verification_confirm_Button"
        android:layout_marginTop="20dp"
        android:text="@string/verification_resend_code"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:clickable="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>