<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/welcome_parent_layout">


    <ImageView
        android:id="@+id/welcome_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/close" />

    <TextView
        android:id="@+id/text_welcome_message_1a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ChatWelcomeLabel"
        android:layout_margin="15dp"
        android:text="@string/new_group_welcome_message_1a"
        app:layout_constraintTop_toBottomOf="@id/welcome_close_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

<!--    <TextView-->
<!--        android:id="@+id/text_welcome_message_1b"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        style="@style/ChatWelcomeLabel"-->
<!--        android:layout_margin="15dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/text_welcome_message_1a"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->

<!--        />-->

    <TextView
        android:id="@+id/text_welcome_message_1c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ChatWelcomeLabel"
        android:layout_margin="15dp"
        android:text="@string/new_group_welcome_message_1b"
        app:layout_constraintTop_toBottomOf="@id/text_welcome_message_1a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <TextView
        android:id="@+id/text_welcome_message_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ChatWelcomeLabel"
        android:layout_margin="15dp"
        android:text="@string/new_group_welcome_message_2"
        app:layout_constraintTop_toBottomOf="@id/text_welcome_message_1c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <ImageView
        android:id="@+id/image_welcome_message_3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/text_welcome_message_3"
        app:layout_constraintBottom_toBottomOf="@id/text_welcome_message_3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="20dp"
        android:src="@drawable/check_list"/>

    <TextView
        android:id="@+id/text_welcome_message_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/ChatWelcomeLabel"
        android:layout_margin="15dp"
        android:text="@string/new_group_welcome_message_3"
        app:layout_constraintTop_toBottomOf="@id/text_welcome_message_2"
        app:layout_constraintStart_toEndOf="@id/image_welcome_message_3"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <ImageView
        android:id="@+id/image_welcome_message_4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/text_welcome_message_4"
        app:layout_constraintBottom_toBottomOf="@id/text_welcome_message_4"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="20dp"
        android:src="@drawable/check_list"/>

    <TextView
        android:id="@+id/text_welcome_message_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/ChatWelcomeLabel"
        android:layout_margin="15dp"
        android:text="@string/new_group_welcome_message_4"
        app:layout_constraintTop_toBottomOf="@id/text_welcome_message_3"
        app:layout_constraintStart_toEndOf="@id/image_welcome_message_4"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <ImageView
        android:id="@+id/image_welcome_message_5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/text_welcome_message_5"
        app:layout_constraintBottom_toBottomOf="@id/text_welcome_message_5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="20dp"
        android:src="@drawable/check_list"/>

    <TextView
        android:id="@+id/text_welcome_message_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/ChatWelcomeLabel"
        android:layout_margin="15dp"
        android:text="@string/new_group_welcome_message_5"
        android:maxLines="2"
        app:layout_constraintTop_toBottomOf="@id/text_welcome_message_4"
        app:layout_constraintStart_toEndOf="@id/image_welcome_message_5"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/welcome_invite_button"
        style="@style/LighterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:drawableStart="@drawable/invite_member_small"
        android:text="@string/invite_members"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_welcome_message_5"
        />









</androidx.constraintlayout.widget.ConstraintLayout>