<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fr_feedback_title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:hint="@string/subject"
        android:background="@drawable/edit_box_selector"
        >

        <EditText
            android:id="@+id/fr_feedback_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:background="@null"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fr_feedback_message_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fr_feedback_title_label"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_box_selector"
        >

        <EditText
            android:id="@+id/fr_feedback_message_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:scrollbars="horizontal|vertical"
            android:background="@null"
            android:gravity="top|left"
            android:hint="@string/hint_enter_feedback_message"

            />


    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/fr_feedback_contact_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fr_feedback_message_text_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:weightSum="1">


        <TextView
            android:id="@+id/fr_feedback_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/feedback_contact"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_gravity="bottom"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/fr_feedback_contact_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="bottom"
            android:checked="true"
            android:layout_weight="1"
            />


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/send_feedback_button"
        style="@style/LighterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/send_feedback"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fr_feedback_contact_ll"
        />

</androidx.constraintlayout.widget.ConstraintLayout>